kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-ai-platform
  labels:
    name: cloud-ai-platform
